# AV_SAMPLE

./: README.md  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/peter/study/ndk_sample/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/java/com/peter/study/ndk_sample/: MainActivity.java
app/src/main/res/values/: strings.xml  themes.xml
app/src/test/java/com/peter/study/ndk_sample/: ExampleUnitTest.java
audio_video/: build.gradle
audio_video/src/androidTest/java/com/peter/study/audio_video/: ExampleInstrumentedTest.java
audio_video/src/main/: AndroidManifest.xml
audio_video/src/main/cpp/: CMakeLists.txt
audio_video/src/main/cpp/opensl/: audio_play.cpp
audio_video/src/main/java/com/peter/study/audio_video/: MainActivity.java  Utils.java
audio_video/src/main/res/layout/: activity_audio_play.xml  activity_main.xml
audio_video/src/main/res/values/: themes.xml
audio_video/src/main/res/values-night/: themes.xml
ffmpegstudy/: build.gradle
ffmpegstudy/src/androidTest/java/com/peter/ffmpegstudy/: ExampleInstrumentedTest.java
ffmpegstudy/src/main/: AndroidManifest.xml
ffmpegstudy/src/main/cpp/: CMakeLists.txt  ffmpeg_study.cpp
ffmpegstudy/src/main/cpp/util/: LogUtil.h
ffmpegstudy/src/main/java/com/peter/ffmpegstudy/: MainActivity.java
ffmpegstudy/src/main/res/layout/: activity_main.xml
ffmpegstudy/src/test/java/com/peter/ffmpegstudy/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
(+4 files in other folders)
